--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
 	"client": {
-		"host": "Please enter your server URL",
-		"port": "Please enter your server port",
-		"username": "Please enter the bot's username you want"
+		"host": "zombie101gamer.aternos.me",
+		"port": "13505",
+		"username": "Staff"
 	},
 	
 	"! DO NOT EDIT BELOW !": "ONLY IF YOU KNOW WHAT YOU ARE DOING",
 	"logLevel": ["error", "log", "debug"],
 	"action": {
-		"commands": ["forward", "back", "left", "right", "jump"],
+		"commands": ["jump"],
 		"holdDuration": 5000,
 		"retryDelay": 15000
 	}
